--- a/build.gradle
+++ b/build.gradle
@@ -38,16 +38,18 @@ dependencies {
     implementation "org.jetbrains.kotlin:kotlin-reflect:${kotlinVersion}"
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8:${kotlinVersion}"
     implementation "org.slf4j:slf4j-api:1.7.36"
-    implementation "org.eclipse.rdf4j:rdf4j-rio-api:4.2.3"
-    implementation "org.eclipse.rdf4j:rdf4j-runtime:4.2.3"
+    implementation "org.eclipse.rdf4j:rdf4j-rio-api:4.3.2"
+    implementation "org.eclipse.rdf4j:rdf4j-runtime:4.3.2"
 
-    testImplementation "org.testng:testng:7.7.0"
+    testImplementation "io.kotest:kotest-assertions-core:${kotestVersion}"
+    testImplementation "io.kotest:kotest-property:${kotestVersion}"
+    testImplementation "io.kotest:kotest-runner-junit5-jvm:${kotestVersion}"
     testImplementation "org.jetbrains.kotlin:kotlin-test:${kotlinVersion}"
     testImplementation "org.awaitility:awaitility:4.2.0"
     testImplementation "ch.qos.logback:logback-classic:1.4.5"
     testImplementation "io.github.serpro69:kotlin-faker:1.10.0"
     testImplementation "org.testcontainers:testcontainers:1.17.6"
-    testImplementation "com.ontotext.graphdb:graphdb-runtime:10.1.2"
+    testImplementation "com.ontotext.graphdb:graphdb-runtime:10.2.1"
 }
 
 compileKotlin {
@@ -58,17 +60,22 @@ compileTestKotlin {
 }
 
 test {
-    useTestNG()
+    useJUnitPlatform()
     testLogging {
         showStandardStreams = true
     }
+    systemProperty "kotest.assertions.collection.print.size", 1000
+    finalizedBy jacocoTestReport
+}
+
+jacoco {
+    toolVersion = "0.8.10"
 }
 
 jacocoTestReport {
     reports {
-        html.enabled = true
-        xml.enabled = true
-        xml.setDestination(file("${buildDir}/reports/jacoco/test/jacocoTestReport.xml"))
+        html.required = true
+        xml.required = true
     }
 }
 
@@ -81,20 +88,20 @@ publishing {
         mavenJava(MavenPublication) {
             from components.java
             pom {
-                name = 'rdf4k'
-                description = 'A Kotlin library for processing RDF'
-                url = 'https://github.com/cosmin-marginean/rdf4k'
+                name = "rdf4k"
+                description = "A Kotlin library for processing RDF"
+                url = "https://github.com/${publishGit}"
                 licenses {
                     license {
                         name = 'Apache License 2.0'
-                        url = 'https://github.com/cosmin-marginean/rdf4k/blob/main/LICENSE'
+                        url = "https://github.com/${publishGit}/blob/main/LICENSE"
                         distribution = 'repo'
                     }
                 }
                 scm {
-                    url = 'https://github.com/cosmin-marginean/rdf4k'
-                    connection = 'scm:git:git://github.com/cosmin-marginean/rdf4k.git'
-                    developerConnection = 'scm:git:ssh://git@github.com:cosmin-marginean/rdf4k.git'
+                    url = "https://github.com/${publishGit}"
+                    connection = "scm:git:git://github.com/${publishGit}.git"
+                    developerConnection = "scm:git:ssh://git@github.com:${publishGit}.git"
                 }
                 developers {
                     developer {
