--- a/build.gradle
+++ b/build.gradle
@@ -130,8 +130,6 @@ signing {
 task fullBuild {
     dependsOn 'clean'
     dependsOn 'test'
-    dependsOn 'jacocoTestReport'
     dependsOn 'coverallsJacoco'
-    tasks.findByName('jacocoTestReport').mustRunAfter 'test'
-    tasks.findByName('coverallsJacoco').mustRunAfter 'jacocoTestReport'
+    tasks.findByName('coverallsJacoco').mustRunAfter 'test'
 }
