--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,18 +1,16 @@
----
-name: "tagged-release"
-
+name: Publish release
 on:
   push:
     tags:
       - "v*"
-
 jobs:
-  tagged-release:
-    name: "Tagged Release"
-    runs-on: "ubuntu-latest"
-
+  publish:
+    name: Publish release
+    runs-on: ubuntu-latest
+    permissions:
+      contents: write
     steps:
-      - uses: "marvinpinto/action-automatic-releases@latest"
-        with:
-          repo_token: "${{ secrets.GITHUB_TOKEN }}"
-          prerelease: false
+      - name: Checkout
+        uses: actions/checkout@v3
+      - name: Publish release
+        uses: ghalactic/github-release-from-tag@v4
