--- a/.github/workflows/publish-dokka.yml
+++ b/.github/workflows/publish-dokka.yml
@@ -15,6 +15,7 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           javadoc-branch: dokka
           java-version: 11
-          target-folder: docs/dokka
+          javadoc-source-folder: docs/dokka
+          target-folder: docs
           project: gradle
           custom-command: ./gradlew dokkaHtml
