--- a/.github/workflows/publish-dokka.yml
+++ b/.github/workflows/publish-dokka.yml
@@ -1,21 +1,23 @@
-name: Build and Deploy
+name: Publish Dokka
 
 on:
   push:
     branches:
       - main
+
 jobs:
-  build-and-deploy:
-    permissions:
-      pages: write
-      id-token: write
+  publish:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
         uses: actions/checkout@v3
-      - name: Install and Build
+      - name: Generate Dokka
         run: ./gradlew dokkaHtml
-      - name: Deploy
-        uses: JamesIves/github-pages-deploy-action@v4
+      - name: Deploy to GitHub Pages
+        if: success()
+        uses: crazy-max/ghaction-github-pages@v3
         with:
-          folder: docs/dokka
+          target_branch: gh-pages
+          build_dir: docs/dokka
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
