--- a/.github/workflows/publish-dokka.yml
+++ b/.github/workflows/publish-dokka.yml
@@ -22,6 +22,6 @@ jobs:
         uses: crazy-max/ghaction-github-pages@v3
         with:
           target_branch: gh-pages
-          build_dir: docs/dokka
+          build_dir: build/dokka/html
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
